@@ -1,0 +1,14 @@
+
+#ifndef GEventAction_H
+#define GEventAction_H 1
+
+// geant4
+#include "G4UserEventAction.hh"
+
+class MEventAction : public G4UserEventAction
+{
+	
+};
+
+
+#endif
