@@ -11,6 +11,8 @@
 #include "gstring.h"
 using namespace gstring;
 
+#include <future>
+
 void GemcGUI::createTopButtons(QHBoxLayout *topLayout)
 {
 	QLabel *nEventsLabel = new QLabel(tr("N. Events:"));
@@ -19,7 +21,10 @@ void GemcGUI::createTopButtons(QHBoxLayout *topLayout)
 	runButton->setToolTip("Run events");
 	runButton->setIcon(style()->standardIcon(QStyle::SP_MediaPlay));
 
-	nEvents = new QLineEdit(tr("1"));
+	// getting number of events from grun, which
+	// in turns gets it from options if no grun file is provided
+	const char* grunNumberOfEvents = to_string(gruns->getTotalNumberOfEvents()).c_str();
+	nEvents = new QLineEdit(tr(grunNumberOfEvents));
 	nEvents->setMaximumWidth(50);
 
 	QPushButton *cycleButton = new QPushButton(tr("Cycle"));
@@ -46,13 +51,11 @@ void GemcGUI::createTopButtons(QHBoxLayout *topLayout)
 	topLayout->addStretch(40);
 	topLayout->addWidget(closeButton);
 
-
 	connect(closeButton, &QPushButton::clicked, this, &GemcGUI::gquit);
 	connect(runButton,   &QPushButton::clicked, this, &GemcGUI::beamOn);
 	connect(cycleButton, &QPushButton::clicked, this, &GemcGUI::cycleBeamOn);
 	connect(stopButton,  &QPushButton::clicked, this, &GemcGUI::stopCycleBeamOn);
 }
-
 
 
 void GemcGUI::gquit()
@@ -63,31 +66,40 @@ void GemcGUI::gquit()
 
 void GemcGUI::beamOn()
 {
-	G4UImanager *g4uim = G4UImanager::GetUIpointer();
-
-	// by construction this has 3 strings, no need to check
-	vector<string> sBefore = getStringVectorFromString(eventNumber->text().toStdString());
-
-	int nBefore = stoi(sBefore[2]);
+	// nEvents at the beginning comes from gruns, but users can change it
 	int nToRun  = nEvents->text().toInt();
 
+	G4UImanager *g4uim = G4UImanager::GetUIpointer();
+	
 	// interestingly enough this the accumulate directive will prevent this:
-	// oreAnimation: warning, deleted thread with uncommitted CATransaction
+	// coreAnimation: warning, deleted thread with uncommitted CATransaction
+	// PRAGMA TODO: make this a button
 	g4uim->ApplyCommand("/vis/scene/endOfEventAction accumulate -1");
+//	g4uim->ApplyCommand("/event/keepCurrentEvent");
+//	g4uim->ApplyCommand("/vis/ogl/flushAt never");
 
+	
 	g4uim->ApplyCommand("/gun/particle proton");
 	g4uim->ApplyCommand("/gun/energy 2 GeV");
 	g4uim->ApplyCommand("/gun/direction 0 1 0");
 	g4uim->ApplyCommand("/vis/scene/add/trajectories rich smooth");
 
+//	g4uim->ApplyCommand("/event/keepCurrentEvent");
+//	g4uim->ApplyCommand("/vis/disable");
+
+//	g4uim->ApplyCommand( "/run/beamOn 1");
 	g4uim->ApplyCommand( "/run/beamOn " + to_string(nToRun));
 
+//	g4uim->ApplyCommand("/vis/enable");
+//	g4uim->ApplyCommand("/vis/reviewKeptEvents");
+	
+	updateGui();
 
-	QString newNEvents("Event Number: ");
-	newNEvents.append(to_string(nBefore+nToRun).c_str());
-
-	eventNumber->setText(newNEvents);
 }
+
+
+
+
 
 
 void GemcGUI::cycleBeamOn()
